--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
-.body {
-    font-family: "Jua";
+body {
+    font-family: "Jua", sans-serif;
     margin: 0;
     padding: 0;
     background-color: #fff;
