--- a/css/styles.css
+++ b/css/styles.css
@@ -13,19 +13,18 @@ body {
     padding: 20px;
     flex-direction: row;
     flex-wrap: nowrap;
-    width: 1087px;
+    /*width: 1087px;*/
     margin-left: 140px;
+    margin-right: 140px;
 }
 .nav-links{
+    margin-top: -7px;
     display: flex;
-    width: 600px;
+    /*width: 700px;*/
     align-content: center;
     justify-content: space-between;
     flex-direction: row;
     /*margin-right: 125px;*/
-}
-.logo{
-    /*margin-left: px;*/
 }
 .logo a {
     font-size: 24px;
@@ -45,9 +44,9 @@ body {
     height: 20px;
 }
 .logout-icon{
-    width: 23px;
-    height: 23px;
-    margin-bottom: -1.5px;
+    width: 21px;
+    height: 21px;
+    margin-bottom: -0.5px;
 }
 .nav-links a {
     font-size: 15px;
@@ -58,10 +57,13 @@ body {
 .nav-img{
     margin-top: 9px;
 }
-.CWU{
+.contact{
     margin-right: 250px;
 }
-
+.p1 {
+    font-family: "Jua";
+    font-size: 20px;
+}
 .category p {
     font-family: "Oleo Script Swash Caps", system-ui;
     color: #777;
@@ -71,7 +73,48 @@ body {
 .orangeColoredAlaphabet{
     color: #F6BC72;
 }
-/*-------------------여기까지 Navbar Css-----------------*/
+.menus{
+    width: 800px;
+    justify-content: space-around;
+    align-content: center;
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+}
+.check {
+    width: 130px;
+    padding-left: 120px;
+}
+.talk{
+    width: 130px;
+}
+.record{
+    width: 130px;
+}
+.contact{
+    width: 130px;
+}
+.nav-img{
+    justify-content: space-between;
+    align-content: center;
+    display: flex;
+    flex-direction: row;
+    margin-top: 22px;
+    margin-left: -30px;
+}
+footer {
+    text-align: center;
+    padding: 15px;
+    background: linear-gradient(180deg, #FBFAF6, #FFBD70);
+    color: #4B4B4B;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 97.77%;
+    position: relative;
+    bottom: 0;
+}
+/*-------------------여기까지 navbar & footer Css-----------------*/
 .mainContents{
     margin-right: 150px;
     margin-left: 160px;
@@ -79,7 +122,7 @@ body {
 .categories {
     display: flex;
     margin: 20px 0;
-    justify-content: space-around;
+    justify-content: space-between;
     align-content: center;
 }
 .category {
@@ -91,6 +134,14 @@ body {
 }
 .baby {
     background-color: #FFF6EB;
+    display: flex;
+    flex-direction: column;
+}
+.baby-img{
+    width: 150px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-top: -90px;
 }
 .mom {
     display: flex;
@@ -109,31 +160,32 @@ body {
     height: 170px;
 }
 .dadsIcon{
-    height: 210px;
+    height: 230px;
     margin-right: 0;
     /*margin-left: 300px;*/
-    margin-top: -20px;
+    margin-top: -30px;
 }
 .momsIcon{
-    height: 210px;
+    height: 230px;
     margin-right: 0;
     /*margin-left: 300px;*/
-    margin-top: -20px;
+    margin-top: -30px;
 }
 .category h2 {
     width: 70px;
     height: auto;
     font-size: 20px;
-    color: #543333;
+    color: #333;
     margin-top: -5px;
 }
 .p1 {
     font-family: "Jua", sans-serif;
     font-size: 20px;
+    width: 150px;
 }
 .category p {
     font-family: "Oleo Script Swash Caps", system-ui;
-    color: #543333;
+    color: #777;
     width: 150px;
     height: auto;
 }
@@ -153,7 +205,7 @@ body {
     display: none;
     padding: 20px;
     border-radius: 10px;
-    margin-top: 20px;
+    margin: 20px 150px 20px 160px;
 }
 .yellow-info {
     background-color: #FFF6EB;
@@ -163,12 +215,4 @@ body {
 }
 .blue-info {
     background-color: #EBF3FF;
-}
-footer {
-    text-align: center;
-    padding: 15px;
-    background: linear-gradient(180deg, #FBFAF6, #FFBD70);
-    position: relative;
-    bottom: 0;
-    color: #4B4B4B
 }
