--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,7 @@ body {
 }
 .menus a{
     text-decoration: none;
+    color: inherit;
 }
 .check {
     width: 230px;
@@ -218,4 +219,44 @@ footer {
 }
 .blue-info {
     background-color: #EBF3FF;
+}
+.smoking{
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+.smoking_body{
+    padding: 0px 240px 10px 0px;
+    font-size: 20px;
+    color: #4B4B4B;
+    font-weight: lighter;
+}
+.food{
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+.food_body{
+    padding: 0px 240px 10px 0px;
+    font-size: 20px;
+    color: #4B4B4B;
+    font-weight: lighter;
+}
+.medicine{
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+.medicine_body{
+    padding: 0px 240px 10px 0px;
+    font-size: 20px;
+    color: #4B4B4B;
+    font-weight: lighter;
+}
+.stress{
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+.stress_body{
+    padding: 0px 240px 10px 0px;
+    font-size: 20px;
+    color: #4B4B4B;
+    font-weight: lighter;
 }
