--- a/css/DiaryList_MyMood.css
+++ b/css/DiaryList_MyMood.css
@@ -113,13 +113,31 @@
     margin: 0;
     margin-bottom: 20px;
 }
-
-
+.cal_container{
+    display: block;
+    margin: auto auto;
+    width: 494px;
+    margin-bottom: 40px;
+}
+.cal_row{
+    display: flex;
+    margin-bottom: 10px;
+}
 
 .Day{
     display: block;
 }
 
+.SelectedDiary{
+    display: flex;
+    width: 851px;
+    height: 263px;
+    border: 2px solid black;
+    border-radius: 15px;
+    margin: 0;
+    margin-bottom: 20px;
+    overflow: hidden;
+}
 .Date1{
     font-family: Pretendard Variable;
     font-size: 48px;
@@ -139,13 +157,44 @@
     margin-top: 0;
     text-align: center;
 }
+.selectedDiary_img{
+    width: 263px;
+    height: 263px;
+    overflow: hidden;
+}
 
+.SelectedDiary_main{
+    display: block;
+}
+.SelectedDiary_main_title{
+    display: flex;
+    margin-bottom: 20px;
+}
+.SelectedDiary_main_title_Date{
+    font-size: 27px;
+    font-family: Pretendard Variable;
+    color: var(--color-main-brown);
+    font-weight: 900;
+    margin: 40px;
+    margin-bottom: 0;
+}
+.SelectedDiary_main_title_slider{
+    height: 24px;
+    width: 227px;
+    margin-top: 45px;
+}
+.SelectedDiary_main_title_slider2{
+    margin: 0 12px;
+    font-family: Pretendard Variable;
+    font-size: 20px;
+    font-weight: 300;
+    margin-top: 45px;
+}
 .Diary{
-    width: 650px;
     font-family: Pretendard Variable;
     font-size: 16px;
     font-weight: 300;
-    margin-top: 32px;
+    margin-left: 40px;
 }
 
 .MonthController{
@@ -204,4 +253,59 @@
     margin-top: 23px;
     margin-bottom: 23px;
     color: var(--color-main-gray);
+}
+
+/*-----------------------------커스텀 태그 css-------------------------*/
+
+.cal_clicked_back {
+    padding-top: 10px;
+    width: 52px;
+    height: 68px;
+    background-color: #f6bc72;
+    display: block;
+    border-radius: 6px;
+    margin-right: 6px;
+    margin-left: 6px;
+}
+.cal_noneclicked_back {
+    padding-top: 10px;
+    width: 52px;
+    height: 68px;
+    background-color: white;
+    display: block;
+    border-radius: 6px;
+    margin-right: 6px;
+    margin-left: 6px;
+}
+.cal_date{
+    margin: auto 10px;
+    align-items: center;
+}
+.cal_clicked_font{
+    margin: 0;
+    font-family: Pretendard Variable;
+    font-weight: 800;
+    color: white;
+    font-size: 27px;
+    text-align: center;
+}
+.cal_noneclicked_font{
+    margin: 0;
+    font-family: Pretendard Variable;
+    font-weight: 500;
+    color: var(--color-main-brown);
+    font-size: 27px;
+    text-align: center;
+}
+.cal_circle {
+    fill: red;
+    cx: 50%;
+    cy: 50%;
+}
+
+.cal_svg{
+    width: 6px;
+    height: 6px;
+    margin: auto;
+    margin-left: 23px;
 }
