--- a/css/main.css
+++ b/css/main.css
@@ -270,3 +270,23 @@ footer {
     color: #4B4B4B;
     font-weight: lighter;
 }
+.plan{
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+.plan_body{
+    padding: 0px 240px 10px 0px;
+    font-size: 20px;
+    color: #4B4B4B;
+    font-weight: lighter;
+}
+.change{
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+.change_body{
+    padding: 0px 240px 10px 0px;
+    font-size: 20px;
+    color: #4B4B4B;
+    font-weight: lighter;
+}
